# trunk-stack

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml
3d_printing/: index.html
collecting_data/: index.html
contributing/: index.html
docs/: 3d_printing.md  3dprinting.md  collecting_data.md  contributing.md  electrical_design.md  gripper.md  index.md  mechanical_design.md  mocap.md  motor_control.md  motors.md  motors_gripper.md  optitrack.md  ros2_workspaces.md  software_design.md  telemetry_viewer.md  teleoperation.md  video_streaming.md  visuomotor_rollout.md
docs/stylesheets/: extra.css
electrical_design/: index.html
gripper/: index.html
mechanical_design/: index.html
mocap/: index.html
motor_control/: index.html
motors/: index.html
motors_gripper/: index.html
optitrack/: index.html
ros2_workspaces/: index.html
search/: search_index.json
software_design/: index.html
stack/camera/: README.md
stack/gripper/: README.md
stack/gripper/src/interfaces/: CMakeLists.txt  package.xml
stack/gripper/src/servo_control/: package.xml  setup.py
stack/main/data/servos/: motor_pos_step_0g_oscillations.csv  motor_positions_step_200g.csv
stack/main/scripts/: control_inputs_sampling.py  convert_mat_to_npz.py  data_visualization.ipynb  generate_ol_control_sequence.py  generate_slow_manifold_inputs.ipynb  hysteresis_check.ipynb  ik_regression.ipynb  learn_neural_ik.py  run_data_collection.sh  scratch.ipynb  test_nn.ipynb  test_sampling.py  visualize_cl_traj.ipynb  visualize_mpc.ipynb  visualize_mpc_test.ipynb  visualize_mpc_traj.ipynb  visualize_orientations.ipynb  visualize_traj.ipynb
stack/main/scripts/.ipynb_checkpoints/: visualize_mpc-checkpoint.ipynb
stack/main/src/controller/: setup.py
stack/main/src/executor/: package.xml  setup.cfg  setup.py
stack/main/src/streamer/: package.xml  setup.py
stack/mocap/src/converter/: setup.py
stack/motors/: README.md  delay_plots.ipynb  requirements.txt  times.csv  values.csv
stack/motors/src/converter/: package.xml
stack/motors/src/trunk_motors/: CMakeLists.txt  package.xml
stack/motors/src/trunk_motors/trunk_motors/launch/: launch_motors.py
stack/motors/src/trunk_motors/trunk_motors/scripts/: motor_node.py
stack/motors/src/trunk_motors/trunk_motors/scripts/motor_utils/: dynamixel_client_motor.py
telemetry_viewer/: index.html
teleoperation/: index.html
trunk-stack/main/: README.md
trunk-stack/main/foxglove/: current_layout.json  percent_layout.json  temperature_layout.json
trunk-stack/main/scripts/: control_inputs_sampling.py  data_visualization.ipynb  ik_regression.ipynb
trunk-stack/main/src/executor/: setup.py
trunk-stack/main/src/interfaces/: CMakeLists.txt
trunk-stack/main/src/interfaces/msg/: SingleMotorControl.msg
trunk-stack/mocap/: README.md
trunk-stack/mocap/src/converter/: package.xml  setup.cfg  setup.py
trunk-stack/mocap/src/converter/converter/: converter_node.py
video_streaming/: index.html
visuomotor_rollout/: index.html
(+458 files in other folders)
